feat(device) detect brand Samsung model: Galaxy A32 (SM-A325F)

--- a/Tests/fixtures/smartphone-22.yml
+++ b/Tests/fixtures/smartphone-22.yml
@@ -89,3 +89,21 @@
     model: Galaxy A52
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; arm; Android 11; SM-A325F) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/84.0.4147.135 YaApp_Android/20.85.0 YaSearchBrowser/20.85.0 BroPP/1.0 SA/1 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "11"
+    platform: ARM
+  client:
+    type: browser
+    name: Yandex Browser
+    version: 20.85.0
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy A32
+  os_family: Android
+  browser_family: Unknown
