--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13107,6 +13107,8 @@ Samsung:
       model: 'Galaxy A30s'
     - regex: '(?:SAMSUNG-)?SM-A315[FGN](?:[);/ ]|$)'
       model: 'Galaxy A31'
+    - regex: '(?:SAMSUNG-)?SM-A325F(?:[);/ ]|$)'
+      model: 'Galaxy A32'
     - regex: '(?:SAMSUNG-)?SM-A326(?:BR|B)'
       model: 'Galaxy A32 5G'
     - regex: '(?:SAMSUNG-)?SM-A405(?:F[NM]|S)'
