--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6851,7 +6851,7 @@ Huawei:
       model: 'P smart (2019)'
     - regex: 'POT-LX1A(?:[);/ ]|$)'
       model: 'P smart (2020)'
-    - regex: 'PPA-LX2(?:[);/ ]|$)'
+    - regex: 'PPA-LX[12](?:[);/ ]|$)'
       model: 'P smart (2021)'
     - regex: 'STK-LX1(?:[);/ ]|$)'
       model: 'P smart Z'
@@ -12989,7 +12989,7 @@ Samsung:
       model: 'Galaxy S21 5G'
     - regex: '(?:SAMSUNG-)?SM-G998(?:U1|[0BNUW])'
       model: 'Galaxy S21 Ultra 5G'
-    - regex: '(?:SAMSUNG-)?SM-G996(?:U1|[0BNW])'
+    - regex: '(?:SAMSUNG-)?SM-G996(?:U1|[0BNWU])'
       model: 'Galaxy S21+ 5G'
     - regex: '(?:SAMSUNG-)?SM-F700(?:U1|[0FNUW])|SCV47'
       model: 'Galaxy Z Flip'
@@ -13057,6 +13057,8 @@ Samsung:
       model: 'Galaxy A7 (2018)'
     - regex: '(?:SAMSUNG-)?SM-A71(?:5[FW])?(?:[);/ ]|$)'
       model: 'Galaxy A71'
+    - regex: '(?:SAMSUNG-)?SM-A725F(?:[);/ ]|$)'
+      model: 'Galaxy A72'
     - regex: '(?:SAMSUNG-)?SM-A716(?:U1|[0BUV])(?:[);/ ]|$)'
       model: 'Galaxy A71 5G'
     - regex: '(?:SAMSUNG-)?SM-A(?:530F|800[0FISXY])|SCV32'
@@ -13271,7 +13273,7 @@ Samsung:
       model: 'Galaxy M11'
     - regex: '(?:SAMSUNG-)?SM-M127[FG]'
       model: 'Galaxy M12'
-    - regex: '(?:SAMSUNG-)?SM-(?:M205[FGMN]|M20)(?:[);/ ]|$)'
+    - regex: '(?:SAMSUNG-)?SM-(?:M205(?:[FGMN]|FN)|M20)(?:[);/ ]|$)'
       model: 'Galaxy M20'
     - regex: '(?:SAMSUNG-)?SM-M215F'
       model: 'Galaxy M21'
