--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -3743,3 +3743,21 @@
     model: Vi10 Pro
   os_family: Android
   browser_family: Android Browser
+-
+  user_agent: Mozilla/5.0 (Linux; arm; Android 10; AGR-L09) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/88.0.4324.182 YaApp_Android/21.22.1 YaSearchBrowser/21.22.1 BroPP/1.0 SA/3 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ARM
+  client:
+    type: browser
+    name: Yandex Browser
+    version: 21.22.1
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Huawei
+    model: MediaPad T 10
+  os_family: Android
+  browser_family: Unknown
