feat(device) detect new brand F150 models: B2021 (Bison2021)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -21320,3 +21320,9 @@ OINOM:
   regex: 'OINOM[_ ](V9D|V7H|V[679])(?:[);/ ]|$)'
   device: 'smartphone'
   model: '$1'
+
+# F150 (sub brand Oukitel)
+F150:
+  regex: 'Bison2021(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: 'B2021'
