--- a/Tests/fixtures/smartphone-22.yml
+++ b/Tests/fixtures/smartphone-22.yml
@@ -251,3 +251,21 @@
     model: Redmi Note 10
   os_family: Android
   browser_family: Opera
+-
+  user_agent: Mozilla/5.0 (Linux; arm_64; Android 10; Bison2021) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.141 YaApp_Android/20.125.0 YaSearchBrowser/20.125.0 BroPP/1.0 SA/3 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ARM
+  client:
+    type: browser
+    name: Yandex Browser
+    version: 20.125.0
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: F150
+    model: B2021
+  os_family: Android
+  browser_family: Unknown
