--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -3761,3 +3761,21 @@
     model: MediaPad T 10
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; e-tab 20) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/89.0.4389.105 Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 89.0.4389.105
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: General Mobile
+    model: E-Tab 20
+  os_family: Android
+  browser_family: Chrome
