feat(device) detect brand CUBOT models: Note 20 Pro

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4266,7 +4266,7 @@ Cube:
 
 # CUBOT
 CUBOT:
-  regex: 'CUBOT|RAINBOW 2|KING_KONG_3|ZORRO 001|KINGKONG[_ ]MINI2?|KING KONG CS|(?<!QUMO )QUEST(?!(?:[0-9]|\s[0-9]))(?: LITE)?'
+  regex: 'CUBOT|RAINBOW 2|KING_KONG_3|ZORRO 001|KINGKONG[_ ]MINI2?|KING KONG CS|(?<!QUMO )QUEST(?!(?:[0-9]|\s[0-9]))(?: LITE)?|NOTE 20 PRO'
   device: 'smartphone'
   models:
     - regex: 'CHEETAH 2'
@@ -4303,6 +4303,8 @@ CUBOT:
       model: 'Max'
     - regex: 'NOTE Plus'
       model: 'Note Plus'
+    - regex: 'NOTE 20 PRO'
+      model: 'Note 20 Pro'
     - regex: 'CUBOT[_ ]NOTE[_ ]S'
       model: 'Note S'
     - regex: 'CUBOT_NOVA'
