feat(device) detect brand POCO models: M3

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -16145,12 +16145,12 @@ X-View:
 
 # POCO (sub brand Xiaomi)
 POCO:
-  regex: '(?:POCO[ _](?:X[23]|F2 PRO)|M2007J20CG|M2010J19CG)(?:[);/ ]|$)'
+  regex: '(?:POCO[ _](?:X[23]|F2 PRO|M3)|M2007J20CG|M2010J19CG)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'POCO X2(?:[);/ ]|$)'
       model: 'X2'
-    - regex: 'M2010J19CG(?:[);/ ]|$)'
+    - regex: '(?:M2010J19CG|POCO M3)(?:[);/ ]|$)'
       model: 'M3'
     - regex: '(?:M2007J20CG|POCO X3 NFC)(?:[);/ ]|$)'
       model: 'X3 NFC'
