--- a/Tests/fixtures/smartphone-22.yml
+++ b/Tests/fixtures/smartphone-22.yml
@@ -413,3 +413,21 @@
     model: Note 20 Pro
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 10; ru-ru; POCO M3 Build/QKQ1.200830.002) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/79.0.3945.147 Mobile Safari/537.36 XiaoMi/MiuiBrowser/12.9.3-gn
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: MIUI Browser
+    version: 12.9.3
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: POCO
+    model: M3
+  os_family: Android
+  browser_family: Android Browser
