feat(device) detect brand Realme models: 7I (RMX2103)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11386,7 +11386,7 @@ OnePlus:
 
 # Realme (sub brand Oppo)
 Realme:
-  regex: 'Realme[ _]|(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1|73)|20(?:[025-7]1|[037]2|2[57]|63|7[56]|8[56]|[234]0)|21(?:[12]1|42|55|7[60]|8[059])|2200|18(0[1579]|11|3[13]|2[157]|[45]1|45)|3201)|(?:OPPO[ _]?)?CPH1861)(?:[);/ ]|$)'
+  regex: 'Realme[ _]|(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1|73)|20(?:[025-7]1|[037]2|2[57]|63|7[56]|8[56]|[234]0)|21(?:03|[12]1|42|55|7[60]|8[059])|2200|18(0[1579]|11|3[13]|2[157]|[45]1|45)|3201)|(?:OPPO[ _]?)?CPH1861)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:OPPO[ _]?)?CPH1861(?:[);/ ]|$)'
@@ -11431,6 +11431,8 @@ Realme:
       model: '6 Pro'
     - regex: 'RMX2155'
       model: '7'
+    - regex: 'RMX2103'
+      model: '7I'
     - regex: 'RMX2170'
       model: '7 Pro'
     - regex: 'RMX1925(?:[);/ ]|$)'
