feat(device) detect brand POCO models: X3 (M2007J20CI), C3 (M2006C3MI) feat(device) detect brand Doogee models: S96 Pro, S88 Pro, S59 Pro, S40 Pro

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4689,7 +4689,7 @@ DoCoMo:
 
 # Doogee
 Doogee:
-  regex: 'DOOGEE[ _-]|Valencia2_Y100_?(?:pro|plus)|Y100_Plus|X5max(?:[_ ]PRO)?|Shoot_[12]|x5_doogee|(KISSME|BIGBOY|COLLO[23]?|DAGGER|DISCOVERY2?|FIND|HOTWIND|LATTE|MAX|MINT|MOON|PIXELS|RAINBOX|TURBO|VALENCIA|VOYAGER2?|TITANS2?)[ -_](DG[0-9]+C?)(?:[);/ ]|$)|BL[579]000(?:[);/ ]|$)|BL12000|BL5500[_ ]Lite|X9 Mini|LEO_DG280|Y9Plus|Hitman_DG850|S(?:[56]8|9[05])Pro|S40Lite|(?<!Lenovo )S90C|Ibiza_F2'
+  regex: 'DOOGEE[ _-]|Valencia2_Y100_?(?:pro|plus)|Y100_Plus|X5max(?:[_ ]PRO)?|Shoot_[12]|x5_doogee|(KISSME|BIGBOY|COLLO[23]?|DAGGER|DISCOVERY2?|FIND|HOTWIND|LATTE|MAX|MINT|MOON|PIXELS|RAINBOX|TURBO|VALENCIA|VOYAGER2?|TITANS2?)[ -_](DG[0-9]+C?)(?:[);/ ]|$)|BL[579]000(?:[);/ ]|$)|BL12000|BL5500[_ ]Lite|X9 Mini|LEO_DG280|Y9Plus|Hitman_DG850|S(?:[568]8|9[056]|59|40)Pro|S40Lite|(?<!Lenovo )S90C|Ibiza_F2'
   device: 'smartphone'
   models:
     - regex: '(?:Valencia2_)?Y100_Plus(?:[);/ ]|$)'
@@ -4706,7 +4706,7 @@ Doogee:
       model: 'BL5500 Lite'
     - regex: 'BL12000'
       model: 'BL12000'
-    - regex: 'S([56]8|9[05])Pro'
+    - regex: 'S([568]8|9[056]|59|40)Pro'
       model: 'S$1 Pro'
     - regex: 'S40Lite'
       model: 'S40 Lite'
@@ -16147,7 +16147,7 @@ X-View:
 
 # POCO (sub brand Xiaomi)
 POCO:
-  regex: '(?:POCO[ _](?:X[23]|F2 PRO|M3)|M2007J20CG|M2010J19CG)(?:[);/ ]|$)'
+  regex: '(?:POCO[ _](?:X[23]|F2 PRO|M3)|M2007J20CG|M2010J19CG|M2007J20CI|M2006C3MI)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'POCO X2(?:[);/ ]|$)'
@@ -16156,6 +16156,10 @@ POCO:
       model: 'M3'
     - regex: '(?:M2007J20CG|POCO X3 NFC)(?:[);/ ]|$)'
       model: 'X3 NFC'
+    - regex: 'M2007J20CI(?:[);/ ]|$)'
+      model: 'X3'
+    - regex: 'M2006C3MI(?:[);/ ]|$)'
+      model: 'C3'
     - regex: 'POCO F2 PRO(?:[);/ ]|$)'
       model: 'F2 Pro'
 
