feat(bots): Detects AppSignal bot

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -143,6 +143,15 @@
       name: Apple Inc
       url: https://www.apple.com
 - 
+  user_agent: AppSignalBot/1.0 (+https://appsignal.com)
+  bot:
+    name: AppSignalBot
+    category: Site Monitor
+    url: https://docs.appsignal.com/uptime-monitoring/
+    producer:
+      name: AppSignal
+      url: https://appsignal.com/
+- 
   user_agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_10_1) AppleWebKit/600.2.5 (KHTML, like Gecko) Version/8.0.2 Safari/600.2.5 (Applebot/0.1)
   bot:
     name: Applebot
