--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -92,6 +92,14 @@
     name: 'Apple Inc'
     url: 'https://www.apple.com'
 
+- regex: "AppSignalBot"
+  name: "AppSignalBot"
+  category: "Site Monitor"
+  url: "https://docs.appsignal.com/uptime-monitoring/"
+  producer:
+    name: "AppSignal"
+    url: "https://appsignal.com/"
+
 - regex: 'Arachni'
   name: 'Arachni'
   category: 'Security Checker'
