feat(os) added version detection for webos feat(device) added brand LG detection for webos/SmartTv

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -683,7 +683,7 @@
   os:
     name: webOS
     short_name: WOS
-    version: ""
+    version: "3"
     platform: ""
 -
   user_agent: Mozilla/5.0 (webOS/1.4.5; U; ru-RU) AppleWebKit/532.2 (KHTML, like Gecko) Version/1.0 Safari/532.2 Pixi/1.0
