--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -284,7 +284,23 @@
   name: 'webOS'
   version: '$1'
 
-- regex: '(?:Web0S; .*WEBOS|webOS|web0S|Palm webOS)(?:[/]?(\d+[\.\d]+))?'
+- regex: 'Web0S; Linux/SmartTV.+Chrome/68'
+  name: 'webOS'
+  version: '5'
+- regex: 'Web0S; Linux/SmartTV.+Chrome/53'
+  name: 'webOS'
+  version: '4'
+- regex: 'Web0S; Linux/SmartTV.+Chrome/38'
+  name: 'webOS'
+  version: '3'
+- regex: 'Web0S; Linux/SmartTV.+Safari/538'
+  name: 'webOS'
+  version: '2'
+- regex: 'Web0S; Linux/SmartTV.+Safari/537'
+  name: 'webOS'
+  version: '1'
+
+- regex: '(?:Web0S; .*WEBOS|webOS|web0S|Palm webOS|hpwOS)(?:[/]?(\d+[\.\d]+))?'
   name: 'webOS'
   version: '$1'
 
