feat(device) detect brand Hyundai model: Koral 10XL (HT1004LI16) feat(client) detect lib Akka HTTP

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7186,7 +7186,7 @@ Huawei:
 
 # Hyundai
 Hyundai:
-  regex: 'Hyundai|Ultra (?:Active|Air|Charm|Dream|Energy|Latitude|Link|Live|Shadow|Shine|Storm|Style|Sync|Trend|Vision|Wave)|G(24027|2552[34])K|W25042L|HP554O|Seoul S8|L503F Plus|HT0701L16|HT0704K08|HT1004L16|Koral_8W2|Eternity[_ ]G25'
+  regex: 'Hyundai|Ultra (?:Active|Air|Charm|Dream|Energy|Latitude|Link|Live|Shadow|Shine|Storm|Style|Sync|Trend|Vision|Wave)|G(24027|2552[34])K|W25042L|HP554O|Seoul S8|L503F Plus|HT0701L16|HT0704K08|HT1004L16|HT1004LI16|Koral_8W2|Eternity[_ ]G25'
   device: 'smartphone'
   models:
     - regex: 'Ultra (Active|Air|Charm|Dream|Energy Lite|Energy Plus|Energy|Latitude|Link|Live II|Live|Shadow|Shine|Storm|Style|Sync|Trend|Vision|Wave)'
@@ -7211,6 +7211,9 @@ Hyundai:
     # explicit tables models
     - regex: 'HT0701L16'
       model: 'Koral 7XL'
+      device: 'tablet'
+    - regex: 'HT1004LI16'
+      model: 'Koral 10XL'
       device: 'tablet'
     - regex: 'Koral_8W2'
       model: 'Koral 8W2'
