--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -3941,3 +3941,21 @@
     model: TZ719
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; HT1004LI16) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/89.0.4389.86 Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 89.0.4389.86
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Hyundai
+    model: Koral 10XL
+  os_family: Android
+  browser_family: Chrome
