--- a/regexes/client/libraries.yml
+++ b/regexes/client/libraries.yml
@@ -134,3 +134,8 @@
 - regex: 'Mikrotik/([\.\d]+)'
   name: 'Mikrotik Fetch'
   version: '$1'
+
+# https://doc.akka.io/
+- regex: 'akka-http/([\.\d]+)'
+  name: 'Akka HTTP'
+  version: '$1'
