--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15609,6 +15609,8 @@ Verykool:
   models:
     - regex: 'verykoolS5004'
       model: 'Lotus JR.'
+    - regex: 'verykoolS5005'
+      model: 'Lotus II'
     - regex: 'verykool[ _]?([^/;]+) Build'
       model: '$1'
     - regex: 'verykool[ _]?([^/;]+);'
