feat(device) detect brand Huawei model: MatePad 10.4" WiFi (BAH3-W59) feat(device) detect brand Dell model: Venue 8 3830 feat(device) detect brand CHIA model: GTA7WF feat(device) detect brand TCL model: 10 SE (T766A) feat(device) detect brand Zuum model: Roni feat(device) detect brand Polaroid models: Cosmo K2 (PSPCK20NA), Turbo D2 Plus (PSPTD21NA) feat(device) detect brand Lanix models: Ilium M9s, Ilium M5s, Ilium M7s

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -476,7 +476,7 @@ RIM:
 
 # CHIA
 CHIA:
-  regex: '(SVEGLIO[ _][QH]1|TREO_TAB8G)(?:[);/ ]|$)'
+  regex: '(SVEGLIO[ _][QH]1|TREO_TAB8G|GTA7WF)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'SVEGLIO[ _]([QH]1)'
@@ -484,6 +484,9 @@ CHIA:
     - regex: 'TREO_TAB8G'
       device: 'tablet'
       model: 'TREO TAB8G'
+    - regex: 'GTA7WF'
+      device: 'tablet'
+      model: 'GTA7WF'
 
 # PALM
 Palm:
@@ -4494,7 +4497,7 @@ Dell:
   models:
     - regex: 'XCD35'
       model: 'XCD35'
-    - regex: 'Venue (8 7840|10 7040)'
+    - regex: 'Venue (8 7840|10 7040|8 3830)'
       model: 'Venue $1'
       device: 'tablet'
     - regex: '(?:Dell )?Venue Build'
@@ -7078,6 +7081,9 @@ Huawei:
     - regex: 'BAH3-(?:AL00|[LW]09)(?:[);/ ]|$)'
       model: 'MatePad 10.4"'
       device: 'tablet'
+    - regex: 'BAH3-W59(?:[);/ ]|$)'
+      model: 'MatePad 10.4" WiFi'
+      device: 'tablet'
     - regex: 'AGS3-L09(?:[);/ ]|$)'
       model: 'MatePad T10s'
       device: 'tablet'
@@ -8681,7 +8687,7 @@ Lanix:
       device: 'tablet'
     - regex: 'X120C'
       model: 'Ilium X120C'
-    - regex: 'Ilium[ _](Alpha [15]s|Alpha [379]|L(?:200|6[12]0|9[0125]0|1[0124]00|1050|1120)|LT5[012]0|M[13579]|S(?:106|520|6[27]0)|X(?:1[12]0|2[0126]0|5[12]0|500B|710))(?:[);/ ]|$)'
+    - regex: 'Ilium[ _](Alpha [15]s|Alpha [379]|L(?:200|6[12]0|9[0125]0|1[0124]00|1050|1120)|LT5[012]0|M[13579]|S(?:106|520|6[27]0)|X(?:1[12]0|2[0126]0|5[12]0|500B|710)|M[579]s)(?:[);/ ]|$)'
       model: 'Ilium $1'
     - regex: 'ILIUM[ _]([^;/]+) Build'
       model: 'Ilium $1'
@@ -12143,7 +12149,7 @@ Pentagram:
 
 # Tcl
 TCL:
-  regex: 'TCL,|TCL[_ -][a-z0-9]+|(?:TCL[_ -][^;/]+ Build)|(?:TCLGalaG60(?:\(9108A\))?|A502DL|T78[02]H|5199I|7040N|5133A|5159[AJ]|5152D|T770H|T766H_EEA|T799B|Percee TV)(?:[);/ ]|$)'
+  regex: 'TCL,|TCL[_ -][a-z0-9]+|(?:TCL[_ -][^;/]+ Build)|(?:TCLGalaG60(?:\(9108A\))?|A502DL|T78[02]H|5199I|7040N|5133A|5159[AJ]|5152D|T770H|T766H_EEA|T766A|T799B|Percee TV)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'TCLGalaG60(?:\(9108A\))?(?:[);/ ]|$)'
@@ -12170,7 +12176,7 @@ TCL:
       model: 'L9'
     - regex: 'T770H(?:[);/ ]|$)'
       model: '10L'
-    - regex: 'T766H(?:_EEA)?(?:[);/ ]|$)'
+    - regex: 'T766[HA](?:_EEA)?(?:[);/ ]|$)'
       model: '10 SE'
     - regex: 'T799B(?:[);/ ]|$)'
       model: '10 Pro'
@@ -14088,7 +14094,7 @@ Plum:
 
 # Polaroid
 Polaroid:
-  regex: 'Polaroid|(?:PMID|MIDC)[0-9a-z]+(?:[);/ ]|$)|MID(?:1014|0714)|PRO[VG]?(?:[0-9]{3,}[a-z]*|[0-9]{2}[a-z])|(?:P(?:400[56]|4526|500[56]|502[56]|504[67]|552[56])A|P902/A900|PSPC(?:505|550|[MZL]20A0|K21NA)|SIGMA 5|MIDS145PXE|MIDS747PX|MID4004JBL|MIDS185PR)(?:[);/ ]|$)'
+  regex: 'Polaroid|(?:PMID|MIDC)[0-9a-z]+(?:[);/ ]|$)|MID(?:1014|0714)|PRO[VG]?(?:[0-9]{3,}[a-z]*|[0-9]{2}[a-z])|(?:P(?:400[56]|4526|500[56]|502[56]|504[67]|552[56])A|P902/A900|PSPC(?:505|550|[MZL]20A0|K2[01]NA)|SIGMA 5|MIDS145PXE|MIDS747PX|MID4004JBL|MIDS185PR|PSPTD21NA)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -14098,6 +14104,8 @@ Polaroid:
       model: 'Turbo C5'
     - regex: 'P4006A'
       model: 'Turbo D4'
+    - regex: 'PSPTD21NA'
+      model: 'Turbo D2 Plus'
     - regex: 'P4526A'
       model: 'Turbo E'
     - regex: 'PSPC(505|550)'
@@ -14106,6 +14114,8 @@ Polaroid:
       model: 'Cosmo K'
     - regex: 'P5526A'
       model: 'Cosmo K Plus'
+    - regex: 'PSPCK20NA'
+      model: 'Cosmo K2'
     - regex: 'PSPCK21NA'
       model: 'Cosmo K2 Plus'
     - regex: 'P5026A'
@@ -17744,7 +17754,7 @@ ZTE:
       model: '$1'
 
 Zuum:
-  regex: 'Zuum[ _-]|(?:Akus Z|COVET|MAGNO|ONIX S|STEDI|STELLAR(?:[ _](?:Z|PRO|[MP]1))?|GRAVITY Z|AURA X|COVET_PRO_LITE)(?:[);/ ]|$)'
+  regex: 'Zuum[ _-]|(?:Akus Z|COVET|MAGNO|ONIX S|STEDI|STELLAR(?:[ _](?:Z|PRO|[MP]1))?|GRAVITY Z|AURA X|COVET_PRO_LITE|RONI)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Akus Z'
@@ -17779,6 +17789,8 @@ Zuum:
       model: 'Gravity Z'
     - regex: 'AURA X'
       model: 'Aura X'
+    - regex: 'RONI'
+      model: 'Roni'
     - regex: 'Zuum[ _-]([^;/]+) Build'
       model: '$1'
     - regex: 'Zuum[ _-]?([^;/)]+)(?:[);/ ]|$)'
