--- a/Tests/fixtures/smartphone-22.yml
+++ b/Tests/fixtures/smartphone-22.yml
@@ -3074,6 +3074,7 @@
     brand: Motorola
     model: Moto G8 Power Lite
   os_family: Android
+  browser_family: Android Browser
 -
   user_agent: Dalvik/2.1.0 (Linux; U; Android 11; T790Y Build/RKQ1.201004.002)
   os:
