feat(test) added check correct name browser engine name feat(os) added detect version ios 14.4 and 14.5 feat(browser) added detect browser Opera Touch for ios
feat(device) detect brand HP model: ProBook 6560b
feat(device) detect brand Acer model: Aspire E5-511
feat(device) detect brand Apple models: iMac 27" (2020) (iMac20,1), Mac Mini (2020) (Macmini9,1),
 iMac 27" (2015) (iMac17,1), MacBook 12" (2016) (MacBook9,1), MacBook 13" (2009) (MacBook6,1),
 iMac 27" (2019) (iMac19,1), iMac 27" (2020) (iMac20,2)

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1987,3 +1987,17 @@
     short_name: AND
     version: ""
     platform: ""
+-
+  user_agent: MobileSafari/604.1 CFNetwork/1237 Darwin/20.4.0
+  os:
+    name: iOS
+    short_name: IOS
+    version: "14.5"
+    platform: ""
+-
+  user_agent: 'Opera%20Touch/77 CFNetwork/1220.1 Darwin/20.3.0'
+  os:
+    name: iOS
+    short_name: IOS
+    version: "14.4"
+    platform: ""
