--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -7102,4 +7102,147 @@
     model: IdeaPad S145-15IWL
   os_family: Windows
   browser_family: Unknown
-
+-
+  user_agent: Microsoft Office Word/16.47.314 (Mac OS/11.2.3; Desktop; es-MX; NonAppStore; Apple/iMac20,1)
+  os:
+    name: Mac
+    version: 11.2.3
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Word
+    version: 16.47.314
+  device:
+    type: desktop
+    brand: Apple
+    model: iMac 27" (2020)
+  os_family: Mac
+  browser_family: Unknown
+-
+  user_agent: Microsoft Office Excel/16.46.212 (Mac OS/11.2.2; Desktop; es-MX; AppStore; Apple/Macmini9,1)
+  os:
+    name: Mac
+    version: 11.2.2
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Excel
+    version: 16.46.212
+  device:
+    type: desktop
+    brand: Apple
+    model: Mac Mini (2020)
+  os_family: Mac
+  browser_family: Unknown
+-
+  user_agent: Microsoft Office Excel/16.46.212 (Mac OS/11.2.1; Desktop; en-US; NonAppStore; Apple/iMac17,1)
+  os:
+    name: Mac
+    version: 11.2.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Excel
+    version: 16.46.212
+  device:
+    type: desktop
+    brand: Apple
+    model: iMac 27" (2015)
+  os_family: Mac
+  browser_family: Unknown
+-
+  user_agent: Microsoft Office OneNote/16.0.12527.21594 (Windows/6.1; Desktop WOW64; en-US; Desktop app; Hewlett-Packard/HP ProBook 6560b)
+  os:
+    name: Windows
+    version: "6.1"
+    platform: x64
+  client:
+    type: mobile app
+    name: Microsoft Office OneNote
+    version: 16.0.12527.21594
+  device:
+    type: desktop
+    brand: HP
+    model: ProBook 6560b
+  os_family: Windows
+  browser_family: Unknown
+-
+  user_agent: Microsoft Office OneNote/16.0.13801.20240 (Windows/6.3; Desktop WOW64; en-US; Desktop app; Acer/Aspire E5-511)
+  os:
+    name: Windows
+    version: "6.3"
+    platform: x64
+  client:
+    type: mobile app
+    name: Microsoft Office OneNote
+    version: 16.0.13801.20240
+  device:
+    type: desktop
+    brand: Acer
+    model: Aspire E5-511
+  os_family: Windows
+  browser_family: Unknown
+-
+  user_agent: Microsoft Office Word/16.46.212 (Mac OS/11.2.1; Desktop; es-MX; NonAppStore; Apple/MacBook9,1)
+  os:
+    name: Mac
+    version: 11.2.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Word
+    version: 16.46.212
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook 12" (2016)
+  os_family: Mac
+  browser_family: Unknown
+-
+  user_agent: Microsoft Office Word/16.43.1108 (Mac OS/10.13.6; Desktop; es-MX; NonAppStore; Apple/MacBook6,1)
+  os:
+    name: Mac
+    version: 10.13.6
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Word
+    version: 16.43.1108
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook 13" (2009)
+  os_family: Mac
+  browser_family: Unknown
+-
+  user_agent: Microsoft Office Excel/16.46.212 (Mac OS/11.2.2; Desktop; es-MX; NonAppStore; Apple/iMac19,1)
+  os:
+    name: Mac
+    version: 11.2.2
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Excel
+    version: 16.46.212
+  device:
+    type: desktop
+    brand: Apple
+    model: iMac 27" (2019)
+  os_family: Mac
+  browser_family: Unknown
+-
+  user_agent: Microsoft Office Word/16.47.314 (Mac OS/11.2.3; Desktop; es-MX; NonAppStore; Apple/iMac20,2)
+  os:
+    name: Mac
+    version: 11.2.3
+    platform: ""
+  client:
+    type: mobile app
+    name: Microsoft Office Word
+    version: 16.47.314
+  device:
+    type: desktop
+    brand: Apple
+    model: iMac 27" (2020)
+  os_family: Mac
+  browser_family: Unknown
