--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -504,9 +504,9 @@ Palm:
     - regex: 'Xiino|Palmscape' # Browser for Palm OS only
       model: ''
 
-# HP
+# HP or Hewlett-Packard
 HP:
-  regex: 'TouchPad/\d+\.\d+|hp-tablet|HP ?iPAQ|webOS.*P160U|HP (?:Pro )?Slate|HP [78]|HP 10 Plus|Compaq [7|8]|HP; [^;/)]+'
+  regex: 'Hewlett-Packard|TouchPad/\d+\.\d+|hp-tablet|HP ?iPAQ|webOS.*P160U|HP (?:Pro )?Slate|HP [78]|HP 10 Plus|Compaq [7|8]|HP; [^;/)]+'
   device: 'smartphone'
   models:
     - regex: 'HP Slate 6 Voice Tab'
@@ -542,6 +542,10 @@ HP:
       model: 'iPAQ $1'
     - regex: 'webOS.*(P160U)'
       model: 'Veer'
+
+    - regex: 'HP ProBook (6560b)'
+      device: 'desktop'
+      model: 'ProBook $1'
 
 # TiPhone
 TiPhone:
@@ -605,9 +609,18 @@ Apple:
     - regex: '(?:.+_)?iMac12(?:%2C|,)1'
       device: 'desktop'
       model: 'iMac 21.5" (2011)'
+    - regex: '(?:.+_)?iMac17(?:%2C|,)1'
+      device: 'desktop'
+      model: 'iMac 27" (2015)'
     - regex: '(?:.+_)?iMac19(?:%2C|,)2'
       device: 'desktop'
       model: 'iMac 21.5" (2019)'
+    - regex: '(?:.+_)?iMac19(?:%2C|,)1'
+      device: 'desktop'
+      model: 'iMac 27" (2019)'
+    - regex: '(?:.+_)?iMac20(?:%2C|,)[12]'
+      device: 'desktop'
+      model: 'iMac 27" (2020)'
     - regex: '(?:.+_)?iMac14(?:%2C|,)2'
       device: 'desktop'
       model: 'iMac 27" (2013)'
@@ -617,9 +630,15 @@ Apple:
     - regex: '(?:.+_)?iMac14(?:%2C|,)1'
       device: 'desktop'
       model: 'iMac 21.5" (2013)'
+    - regex: '(?:.+_)?MacBook6(?:%2C|,)1'
+      device: 'desktop'
+      model: 'MacBook 13" (2009)'
     - regex: '(?:.+_)?MacBook8(?:%2C|,)1'
       device: 'desktop'
       model: 'MacBook 12" (2015)'
+    - regex: '(?:.+_)?MacBook9(?:%2C|,)1'
+      device: 'desktop'
+      model: 'MacBook 12" (2016)'
     - regex: '(?:.+_)?iMac10(?:%2C|,)1'
       device: 'desktop'
       model: 'iMac (2009)'
@@ -774,6 +793,9 @@ Apple:
     - regex: '(?:.+_)?Macmini8(?:%2C|,)1'
       device: 'desktop'
       model: 'Mac Mini (2018)'
+    - regex: '(?:.+_)?Macmini9(?:%2C|,)1'
+      device: 'desktop'
+      model: 'Mac Mini (2020)'
     - regex: '(?:.+_)?Macmini7(?:%2C|,)1'
       device: 'desktop'
       model: 'Mac Mini (2014)'
@@ -1320,7 +1342,7 @@ Acer:
     - regex: '(Aspire (?:V5-121|XC-704G|V5-573G))'
       model: '$1'
       device: 'desktop'
-    - regex: '(Predator G9-793)'
+    - regex: '(Predator G9-793|Aspire E5-511)'
       model: '$1'
       device: 'desktop'
 
