--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -417,6 +417,14 @@
   name: 'iOS'
   version: '$1'
 
+- regex: 'CFNetwork/.+ Darwin/20.4.0(?!.*x86_64)'
+  name: 'iOS'
+  version: '14.5'
+
+- regex: 'CFNetwork/.+ Darwin/20.3.0(?!.*x86_64)'
+  name: 'iOS'
+  version: '14.4'
+
 - regex: 'CFNetwork/.+ Darwin/20.2.0(?!.*x86_64)'
   name: 'iOS'
   version: '14.3'
