feat(device) detect brand AllDocube model: iPlay 40

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4284,7 +4284,7 @@ Crosscall:
 
 # AllDocube (alldocube.com)
 AllDocube:
-  regex: '(?:T1001XS?|T1006S?|iPlay_20|U1006H?)(?:[);/ ]|$)'
+  regex: '(?:T1001XS?|T1006S?|iPlay_[24]0|U1006H?)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'T1001XS(?:[);/ ]|$)'
@@ -4297,8 +4297,8 @@ AllDocube:
       model: 'M5X'
     - regex: 'U1006H?(?:[);/ ]|$)'
       model: 'iPlay 10 Pro 10.1"'
-    - regex: 'iPlay_20(?:[);/ ]|$)'
-      model: 'iPlay 20'
+    - regex: 'iPlay_([24]0)(?:[);/ ]|$)'
+      model: 'iPlay $1'
 
 # Cube (short name Alldocube)
 Cube:
