feat(device) detect brand Tecno Mobile models: Spark 5 Pro (KD7), Camon 11 (CF7),  Spark 4 Lite (BB4k), Camon 12 (CC7), Spark 4 (KC8) feat(device) detect brand Huawei model: MediaPad 7 Lite II

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14988,6 +14988,18 @@ Tecno Mobile:
       device: 'tablet'
     - regex: 'Tecno[ _]CB7[j]?'
       model: 'Camon i4'
+    - regex: 'Tecno[ _]CF7(?:[);/ ]|$)'
+      model: 'Camon 11'
+    - regex: 'Tecno[ _]CC6(?:[);/ ]|$)'
+      model: 'Camon 12 Air'
+    - regex: 'Tecno[ _]CC7(?:[);/ ]|$)'
+      model: 'Camon 12'
+    - regex: 'Tecno[ _]KC8(?:[);/ ]|$)'
+      model: 'Spark 4'
+    - regex: 'Tecno[ _]BB4k(?:[);/ ]|$)'
+      model: 'Spark 4 Lite'
+    - regex: 'Tecno[ _]KD7(?:[);/ ]|$)'
+      model: 'Spark 5 Pro'
     - regex: 'Tecno[ _]DP8D(?:[);/ ]|$)'
       model: 'DroidPad 8D'
       device: 'tablet'
